Test/git-issues/git-issue-1963b.dfy.expect
git-issue-1963b.dfy(12,15): Error: invalid NoUSIdentOrDigits
1 parse errors detected in git-issue-1963b.dfy
